# life-rpg

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/scripts/: ensure-ollama-model.sh  setup-ollama.sh
.github/workflows/: build-windows.yml
docs/: DEVCONTAINER_SETUP.md  PHASE3_WINDOWS_TRACKING.md  PHASE4_AUTO_TRACKING.md  PHASE5_ADVANCED_RPG.md  PROJECT_SPEC.md
docs/LLM/: LLM_DEV_PLAN.md  LLM_DEV_PLAN_v2.md
docs/usage/: HOW_TO_USE.md
docs/업데이트내역/: 0.0.0.md  0.0.1.md  0.1.0.md
docs/요구사항/: 개선사항.md
scripts/: determine-version.cjs  set-app-version.cjs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: client.rs  mod.rs  prompt.rs  rules.rs
src-tauri/src/commands/: ability.rs  activity.rs  character.rs  goal.rs  mod.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src/components/: ActivityLogForm.tsx  ActivityLogList.tsx  AppHeader.tsx  CharacterSetup.tsx  CharacterView.tsx  GoalForm.tsx  GoalList.tsx  LogViewer.tsx  PixelCharacter.tsx
src/pages/: ActivityDayPage.tsx  ActivityPage.tsx  AnalysisPage.tsx
src/stores/: characterStore.ts  logStore.ts
src/types/: index.ts
